dealer hand added, background changed.

--- a/app.css
+++ b/app.css
@@ -5,10 +5,11 @@
 
 body{
     font-family: "Helvetica Neue",Helvetica,Arial;
-    background-image: url('blackjack.jpg');
-    background-size: auto;
+    background-image: url('background1.jpeg');
+    background-size: cover;
     color: white;
     background-repeat: no-repeat;
+    padding: 20px;
 
 }
 
